# opencl-playground

./: .gitignore  .gitmodules
add-array/: compute.c  compute.h  main.c  makefile  meson.build
distance_calc/: main.c  makefile  meson.build  shader.cl
propper_rewrite/: meson.build
propper_rewrite/resources/: config.ini  config.ini.in  meson.build
propper_rewrite/resources/apptest/: config.ini
propper_rewrite/src/: meson.build
propper_rewrite/src/app/: config.h  config.h.in  config_ini.c  config_ini.h  main.c  meson.build
propper_rewrite/src/compute/: compute.c  compute.h  ftypes.h  meson.build  opencl_error.c  opencl_error.h
propper_rewrite/src/csv/: csv.h  meson.build
propper_rewrite/src/error/: error.c  error.h  meson.build
propper_rewrite/src/knn/: knn.c  knn.h  meson.build
propper_rewrite/src/portability/: meson.build  portability.h
propper_rewrite/src/qsort/: meson.build  qsort.c  qsort.h
read_csv/: dataset.c  dataset.h  err.c  err.h  euclidean_distance.cl  knn.c  knn.h  main.c  makefile  meson.build  read_file.c  read_file.h  simple_distance.cl  types.h
